# cookiecutter-python-cli

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_name}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/: .editorconfig  README.md  pyproject.toml  setup.cfg  {{cookiecutter.file_name}}.py
{{cookiecutter.project_slug}}/src/: {{cookiecutter.src_file_name}}.py
{{cookiecutter.project_slug}}/test/: test_version.py
