[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "."
authors = ["Sam Atkins <samatkins@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mypy = "^0.740.0"
pylint = "^2.4"

[tool.poetry.scripts]
"{{cookiecutter.project_name}}" = "{{cookiecutter.project_name}}.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
